<resources>
    <string name="app_name">Jobba Lagom</string>
    <string name="job">Jobb</string>
    <string name="edit_jobs">Lägg till nytt arbete</string>
    <string name="action_settings">Inställningar</string>
    <string name="actionbarTitleBudget">Budgetöversikt</string>
    <string name="title_activity_settings">Inställningar</string>
    <string name="title_activity_about">Om</string>
    <string name="title_activity_work">Arbetspassregistreraren</string>
    <string name="title_activity_expense">Utgiftsregistreraren</string>
    <string name="title_activity_setup">Kom igång</string>
    <string name="action_vote">Rösta</string>
    <string name="action_about">Om</string>
    <string name="start_time">Starttid</string>
    <string name="end_time">Sluttid</string>
    <string name="worked_hours">Ange arbetad tid</string>
    <string name="cancel">Avbryt</string>
    <string name="add">Klar</string>
   <string name="action_about_disclaimer">Denna applikation är skapad av en grupp studenter på Malmö högskola. Applikationen befinner sig för tillfället i ett tidigt
     utvecklings stadie och diverse buggar och fel kan inträffa. Vi tar inget ansvar för felaktiga beräkningar, krascher eller att du missade din tvättid.
    </string>
    <string name="aboutAnton">anton.gustafsson@live.com</string>
    <string name="aboutChristoffer">Christoffer@lulz.com</string>
    <string name="aboutKajsa">Kajsa@lulz.com</string>
    <string name="aboutMorgan">hedstrom.morgan@gmail.com</string>
    <string name="aboutJakup">jakup@lulz.com</string>

    <!--Floating button strings-->
    <string name="fButtonExpanse">Lägg till utgift</string>
    <string name="fButtonTax">Ändra skattesats</string>
    <string name="fButtonBudget">Budgetöversikt</string>
    <string name="fButtonTime">Tidsregistreraren</string>


    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">Generella</string>

    <string name="pref_title_social_recommendations">Sätt på rekommendationer</string>
    <string name="pref_description_social_recommendations">Rekommendationer
    </string>

    <string name="pref_title_display_name">Visningsnamn</string>
    <string name="pref_default_display_name">Whatever</string>

    <string name="pref_title_add_friends_to_messages">Lägg till något</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; uppdateringar</string>

    <string name="pref_title_sync_frequency">Synk frekvens</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Telefonens synk inställningar</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifikationer</string>

    <string name="pref_title_new_message_notifications">Nytt meddelande notifikation</string>

    <string name="pref_title_ringtone">Ringsignal</string>
    <string name="pref_ringtone_silent">Tyst</string>

    <string name="pref_title_vibrate">Vibration</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_date_picker">DatePicker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fButtonJob" />

    <string name="aboutAuthor">Anton Gustafsson-baxtexx@gmail.com, Christoffer Strandberg, Kajsa Ornstierna, Jakup Guven, Morgan Hedström</string>

</resources>
