<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Första menyn i appen -->

    <header
        android:fragment="com.example.i7.jobbalagom.activities.RemoveSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.i7.jobbalagom.activities.RemoveSettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.i7.jobbalagom.activities.RemoveSettingsActivity$DJobPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/job" />

</preference-headers>
